--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "3", default-features = false, features = ["std", "suggestions"] }
 reqwest = { version = "0.11", features = ["json"]}
+serde = { version = "1", features = ["derive"]}
 tokio = { version = "1", features = ["full"]}
-
-[dependencies.clap]
-version = "3"
-default-features = false
-features = ["std", "suggestions"]
