--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 clap = { version = "3", default-features = false, features = ["std", "suggestions"] }
 reqwest = { version = "0.11", features = ["json"]}
 serde = { version = "1", features = ["derive"]}
+simple_config_parser = "1"
 tokio = { version = "1", features = ["full"]}
