--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3", default-features = false, features = ["std", "suggestions"] }
+regex = "1"
 reqwest = { version = "0.11", features = ["json"]}
 serde = { version = "1", features = ["derive"]}
 simple_config_parser = "1"
